--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile files('libs/jpct_ae.jar')
     compile files('libs/bones.jar')
+    compile project(path: ':ble')
 }
