添加fir.im上传配置

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ deploy:
   on:
     repo: rabbitom/ble-sensor-android
     tags: true
+before_install:
+  - gem install fir-cli
+after_deploy:
+  - fir p app/build/outputs/apk/app-release.apk -T $FIR_TOKEN -c "`git cat-file tag $TRAVIS_TAG`"
