--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: android
 android:
   components:
-    - build-tools-25.0.2
-    - android-25
+  - build-tools-25.0.2
+  - android-25
 script:
-  - "./gradlew assembleRelease"
+- "./gradlew assembleRelease"
 deploy:
   provider: releases
   api_key:
@@ -15,6 +15,5 @@ deploy:
     repo: rabbitom/ble-sensor-android
     tags: true
 before_install:
-  - gem install fir-cli
-after_deploy:
-  - fir p app/build/outputs/apk/app-release.apk -T $FIR_TOKEN -c "`git cat-file tag $TRAVIS_TAG`"
+- openssl aes-256-cbc -K $encrypted_e01b280f5ed0_key -iv $encrypted_e01b280f5ed0_iv
+  -in android_common_release_key.jks.enc -out app/android_common_release_key.jks -d
