--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,7 @@ deploy:
 before_install:
 - openssl aes-256-cbc -K $encrypted_e01b280f5ed0_key -iv $encrypted_e01b280f5ed0_iv
   -in android_common_release_key.jks.enc -out app/android_common_release_key.jks -d
+- gem install fir-cli
+after_deploy:
+- fir p app/build/outputs/apk/app-release.apk -T $FIR_TOKEN -c "`git cat-file tag
+  $TRAVIS_TAG`"
